Update project documentation and improve code quality standards
- Enhanced CLAUDE.md with comprehensive 2025 modernization details
- Updated README.md with Java 24 and SonarCloud requirements
- Modernized GroupByDepartment.java to use List.of() and proper annotations
- Fixed ProcessDictionaryV2.java lambda to use Predicate instead of Function
- Simplified pattern matching in AstroDataServiceTest.java switch expression
- Used unnamed pattern variables in UserServiceTest.java for cleaner code

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>